--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@datastructures-js/graph": "^5.3.0",
+    "benchmark": "^2.1.4",
+    "dijkstrajs": "^1.0.3",
+    "graph-data-structure": "^3.3.0",
+    "jest": "^29.5.0",
+    "node-dijkstra": "^2.5.0"
+  }
 }
